--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-oauth/google": "^0.12.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.427.0",
     "react": "^18.3.1",
