--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "input-otp": "^1.4.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.427.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^6.26.0",
+    "react-speech-kit": "^3.0.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "ui": "file:"
